New in 1.7:

* Struct types containing elements other than int, long, long long, pointer
  are not supported any more. Passing them as arguments and results is too
  hairy.
* Added support for PowerPC Linux.

New in 1.6:

* The avcall and callback packages are compiled as position-independent code,
  if CC="gcc -fPIC".
* The avcall and callback packages are built as shared libraries, if
  the option "--enable-shared" is passed to configure.
* The package can now be built with CC="gcc -x c++".
* Improved RS6000/PowerPC support.
* Improved support for gcc on Irix6 (-n32 ABI).
* Added preliminary support for 64-bit SPARC.

New in 1.5:

* Added support for m68k Linux.

New in 1.4:

* Added support for the two new ABIs on Irix6 (-n32, -64).
* A fix for DEC Alpha.

New in 1.3.1:

* Added support for Mingw32 on Win32.
* Fixed a compilation problem in trampoline on m68k NetBSD.
* Fixed an installation problem with clisp: When configured outside the source
  directory, callback.h would not be copied into the build directory.

New in 1.3:

* Added the callback package, a reentrant combination of vacall and trampoline.
* The avcall and callback packages are multithread-safe.
* Fixed bugs in trampoline on hppa and rs6000.
* On hppa, added support for gcc-2.7.2, although its calling convention is
  different from gcc-2.6.3.

New in 1.2.1:

* Added support for MSVC5 on Win32.

New in 1.2:

* Support passing/returning values of type `long long' and `unsigned long long'
  on platforms which have these types.
* Support for "stdcall" calling convention on i386.
* Added support for Cygwin32 and MSVC4 on Win32.
* Added support for EMX on OS/2.
* Added support for m68k AmigaOS (Jörg Höhle).
* Added support for m68k SunOS 4.0.3.
* More reliable cache-flushing in trampoline.

New in 1.1:

* Added support for SUNWspro cc on Sparc Solaris.
* Added support for AIX 4.
* Added preliminary support for 64-bit MIPS.
