@@ -4,6 +4,7 @@ New in 1.7:
   are not supported any more. Passing them as arguments and results is too
   hairy.
 * Added support for PowerPC Linux.
+* Added support for IA-64 Linux.
 
 New in 1.6:
 
